2014-05-20 Martin Grunewald  <Martin.Grunewald@cern.ch>
        * tag V01-07-15
        * Some more Java code

2014-05-09 Martin Grunewald  <Martin.Grunewald@cern.ch>
        * tag V01-07-14
        * Add Java code for PR 3211, misc fixes

2014-05-05 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-13

2014-05-05 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-12bis
	* Fix Global PSets editing and display

2014-03-11 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-11
	* Fix (recursive) parsing of PSets and VPSets in the JPythonParser

2014-03-06 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-10
	* Fix bug in displaying unresolved InputTags in the GUI panels

2014-02-26 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-09
	* add more JavaCode execution

2014-02-20 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-07/08
	* add Fix bugs in (V)ESInputTag implementation

2014-02-19 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-06
	* add support in GUI for (V)ESInputTag based on work from Sandro

2014-02-06 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-05
        * add functionality to execute java code to directly manipulate the config

2013-11-28 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-07-04
        * enable editing of path's prescales in upper-right panel (path view)

2013-08-01 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-03
	* update Oracle JDBC to version 12.1.0.1 for Java 6
	* migrate from org.jdesktop.layout.GroupLayout (Swing Layout) to javax.swing.GroupLayout (included in JDK 1.6+)

2013-07-19 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-02
	* roll back Oracle JDBC drivers to 10.2.0.2

2013-07-13 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-01
	* update Oracle JDBC to version 12.1.0.1 for Java 7

2013-07-04 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-07-00
	* rebuild for Java 7

2013-04-30 Andrea Bocci <andrea.bocci@cern.ch>
	* tag V01-06-69