@@ -1,3 +1,3 @@
-confdb.version=V01-07-15
+confdb.version=V01-07-16
 confdb.contact=andrea.bocci@cern.ch
 confdb.url=http://j2eeps.cern.ch/cms-project-confdb-hltdev/
